api-grpc/deploy/gateway/envoy/envoy.yaml
static_resources:
  listeners:
    - name: http-listener
      address:
        socket_address: { address: 0.0.0.0, port_value: 8080 }
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: backend
                      domains: ["*"]
                      routes:
                        # 交給我們的 Go 濾器處理
                        - match: { prefix: "/" }
                          route: { cluster: blackhole } # 不會真的用到，上層濾器會 SendLocalReply
                http_filters:
                  - name: envoy.filters.http.golang
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.golang.v3.Config
                      library_id: example
                      library_path: /usr/local/lib/libgolang.so
                      plugin_name: example-1
                      # plugin_config:
                      #   "@type": type.googleapis.com/xds.type.v3.TypedStruct
                      #   value:
                      #     backend_addr: "host.docker.internal:8081"  # 你的 gRPC 服務位置（h2c）
                      #     timeout_ms: 2000
                  - name: envoy.filters.http.router

  clusters:
    # 佔位（不會走到），避免 HCM 報無 cluster
    - name: blackhole
      type: STATIC
      connect_timeout: 0.25s
      load_assignment:
        cluster_name: blackhole
        endpoints: []
